# PCO-AI-Chatbot-for-NZL

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  __init__.py  pyproject.toml  run.sh
backend/app/: __init__.py  main.py  observability.py
backend/app/api/: chat.py  legislation.py  tools.py
backend/app/core/: config.py  embeddings.py  index.py  llm.py  query_engines.py  react_agent.py  vector_store.py
backend/app/db/: models.py  mongodb.py
backend/app/parsers/: __init__.py  base.py  cli.py  xml_parser.py
backend/app/parsers/models/: __init__.py  act.py  misc.py  notes.py  paragraph.py  part.py  schedule.py  section.py  table.py  text.py
backend/app/prompts/: templates.py
backend/data/legislation/Acts/public/1986/5/: 096be8ed81e0a016.json
backend/data/legislation/Acts/public/1993/91/: 096be8ed81903b2d.json
backend/data/legislation/Acts/public/2013/148/: 096be8ed81c1e62e.json
backend/data/legislation/Acts/public/2015/70/: 096be8ed81df588c.json
backend/scripts/: __init__.py  create_vector_index.py  generate_summaries.py  populate_embeddings.py  serve.py
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/legislation/: page.tsx
frontend/src/app/legislation/[id]/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/app/tools/auto-retriever/: page.tsx
frontend/src/app/tools/document-query/: page.tsx
frontend/src/app/tools/query-engine/: page.tsx
frontend/src/app/tools/retriever/: page.tsx
frontend/src/components/: Chat.tsx  ChromaAutoRetriever.tsx  NaiveVectorRetriever.tsx  SideNav.tsx
frontend/src/components/legislation/: fragment-viewer.tsx
frontend/src/components/ui/: tree.tsx
frontend/src/types/: legislation.ts
